CVS code -
General
	- Changed #ifdefs to check for both DISABLE_TABCOMP and
	  NANO_SMALL, makes tiny option leave out tab completion, which
	  shoudl be left out in that circumstance.  Saves at least 5k.
	- Previous change to #ifdefs DISABLE_TABCOMP and NANO_SMALL rolled
	  back.
	- Changed nano.h to automatically define 5 DISABLE varibles when
	  NANO_SMALL (enable-tiny) is requested at configure.
- configure.in:
	- Fix for _use_keypad check breaking slang support (Christian
	  Weisgerber).
- faq.html:
	- Added some info on making the binary smaller with the configure
	  script.
- files.c:
  real_dir_from_tilde()
	- Oops, fix case where buf ="~", silly crash (bug discovered by
	  Neil Parks).
  do_browser()
	- Added space and - keys to do page up and down.

nano 0.9.25 - 01/07/2001
General - 
	- New file browser code.  New functions in files.c:do_browser(),
	  helper functions browser_init(), tail(), striponedir(),
	  filestat().  New shortcut list browser_list.  Some new
	  strings to translate.  Added function do_browse_from().
	- Keypad code has been changed slightly.  Now checks for
	  _use_keypad flag in window to see whether or not to turn 
	  the keypad() back off when finished (taken from aumix).  Moved
	  to winio.c where it should probably be anyway.  New confgure
	  check for _use_keypad in window sstruct.  This will have to do
	  for now.
	- Moved keypad() calls for PDCURSES from main() to window_init()
	  so the keypad continues to work after a Meta-X, for example.
	  Fixed bug #51.
- faq.html:
	- Fix typos and small mistakes (Jordi).
- files.c:
  username_tab_completion()
	- Added the (char *) sizeof when allocating memory for the filename
	  array (Rocco).
  cwd_tab_completion()
	- removed skipping . and .. when tabulating matches.
	- Added the (char *) sizeof when allocating memory for the filename
	  array (Rocco).
  do_writeout()
	- Now takes an argument so the string typed in can be retained
	  when calling the browser.
  do_browser()