@@ -19,6 +19,11 @@ AC_ARG_ENABLE(tiny,
                           (currently disables detailed help and i18n)],
 [if test x$enableval = xyes; then
     AC_DEFINE(NANO_SMALL) tiny_support=yes
+    AC_DEFINE(DISABLE_TABCOMP) 
+    AC_DEFINE(DISABLE_SPELLER) 
+    AC_DEFINE(DISABLE_HELP) 
+    AC_DEFINE(DISABLE_JUSTIFY) 
+    AC_DEFINE(DISABLE_BROWSER) 
  fi])
 
 AC_ARG_ENABLE(extra,
